# Chating-Room

./: CMakeLists.txt  README.md
client/: README.md  chatprot.md  chats.pro  signalChating.ui  signalChating.ui.autosave  signalchating.cpp  signalchating.h  widget.ui
client/Chat/: Chat.pro  client.cpp  client.h  l_friend.cpp  l_friend.h  l_friend.ui  l_group.cpp  mainwindow.ui  new_friend.cpp  new_friend.h  regis.ui
client/Imitation_QQ/: CMakeLists.txt  MyResources.qrc  add_friend.cpp  add_friend.h  add_friend.ui  client.cpp  client.h  l_friend.cpp  l_friend.h  l_friend.ui  l_group.cpp  l_group.h  l_group.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_friend.cpp  new_friend.ui  regis.cpp  regis.h  regis.ui  set_group.cpp  set_group.h  set_group.ui
client/chatting/: addapply.cpp  addapply.h  addapply.ui  addfrient.cpp  addfrient.h  addfrient.ui  chatting.pro  craetgroupname.cpp  craetgroupname.h  craetgroupname.ui  creatgroup.cpp  creatgroup.h  creatgroup.ui  creatgroup.ui.autosave  creatsuc.cpp  creatsuc.h  creatsuc.ui  friendchat.cpp  friendchat.h  friendchat.ui  groupchat.cpp  groupchat.h  groupchat.ui  groupchatting.cpp  groupchatting.h  groupchatting.ui  login.cpp  login.h  login.ui  main.cpp  mysocket.cpp  mysocket.h  online.cpp  online.h  register.cpp  register.h  register.ui  register_success.cpp  register_success.h  register_success.ui  (+6 more)
server/: CMakeLists.txt  README.md
server/include/: conf.json
server/include/MysqlPool/: CMakeLists.txt  test.sql
server/src/: ConnectionPool.cpp  CreateDb.sql  server-main.cpp  server.cpp
